Squashed commit of the following:
commit 5ce28c3d570aca780238452190aa10d05b8b4095
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 21:57:23 2026 +0000

    Fix tests

commit 91cd02213134b4a9f60659419472e039a882105b
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 20:23:03 2026 +0000

    Update interfaces

commit 2ea47405c9ba12105b9404e5d6982e65e10d3417
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 19:24:15 2026 +0000

    Functional perspective clipping

commit d7bb447f3200b7b22fdf4b6a0e775850d45610f8
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:42:21 2026 +0000

    Faster

commit d2521ad63f916d917c4e87b37759eb178e94cdf0
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:24:17 2026 +0000

    functional, faster

commit a9681a7846d662256eadab2caa6ce4f542d3a932
Author: musingsole <musingsole@gmail.com>
Date:   Sat Jan 24 03:16:03 2026 +0000

    Functional, but stream glitch

--- a/harmony/HarmonyMachine.ipynb
+++ b/harmony/HarmonyMachine.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3fd951c3-4501-4d8e-9dbb-d6285efeb532",
    "metadata": {},
    "outputs": [],
@@ -89,8 +89,122 @@
     "    def loadGame(self, gameName=\"harmony\"):\n",
     "        self.reset()\n",
     "        # TODO: Implement\n",
+    "\n",
+    "    def cycle(self):\n",
+    "        cycleStart = datetime.utcnow()\n",
+    "        try:\n",
+    "            self.cc.capture()\n",
+    "        except:\n",
+    "            from traceback import format_exc\n",
+    "            print(\"CYCLE FAILURE!!!\")\n",
+    "            print(format_exc())\n",
+    "            return \"Cycle Failure\"\n",
     "    \n",
     "    def getCameraImagesWithChanges(self, cameraKeys=None, show_interactions=True):\n",
+    "        if cameraKeys is None:\n",
+    "            cameraKeys = self.cc.cameras.keys()\n",
+    "\n",
+    "        images = {}\n",
+    "        for camName in cameraKeys:\n",
+    "            cam = self.cc.cameras[camName]\n",
+    "            \n",
+    "            # 1. Get Bounding Box\n",
+    "            x, y, w, h = cam.activeZoneBoundingBox\n",
+    "            \n",
+    "            # 2. Mask to AZ (using existing method)\n",
+    "            maskedImage = cam.cropToActiveZone(cam.mostRecentFrame.copy())\n",
+    "            \n",
+    "            # 3. Crop to Box\n",
+    "            croppedImage = maskedImage[y:y+h, x:x+w]\n",
+    "            \n",
+    "            # 4. Resize to 1920x1080\n",
+    "            target_res = (1920, 1080)\n",
+    "            camImage = cv2.resize(croppedImage, target_res, interpolation=cv2.INTER_AREA)\n",
+    "            \n",
+    "            # Helper for transforming points\n",
+    "            def transform_pt(point):\n",
+    "                px, py = point\n",
+    "                # Translate\n",
+    "                tx = px - x\n",
+    "                ty = py - y\n",
+    "                # Scale\n",
+    "                sx = tx * (target_res[0] / w)\n",
+    "                sy = ty * (target_res[1] / h)\n",
+    "                return int(sx), int(sy)\n",
+    "\n",
+    "            # Paint known objects faction color\n",
+    "            for objAndColor in self.objectsAndColors[::-1]:\n",
+    "                memObj = objAndColor.object\n",
+    "                color = objAndColor.color\n",
+    "                if memObj.changeSet[camName].changeType not in ['delete', None]:\n",
+    "                    # Transform contours\n",
+    "                    original_pts = memObj.changeSet[camName].changePoints\n",
+    "                    transformed_pts = [transform_pt(pt) for pt in original_pts]\n",
+    "                    memContour = np.array([transformed_pts], dtype=np.int32)\n",
+    "                    \n",
+    "                    camImage = cv2.drawContours(camImage, memContour, -1, color, -1)\n",
+    "                    \n",
+    "                    if show_interactions and self.objectCouldInteract(memObj):\n",
+    "                        center_x, center_y = transform_pt(memObj.center[camName]) # Assuming center is available or calc mean\n",
+    "                        # Re-calc center from transformed contour\n",
+    "                        center_x = int(np.mean(memContour[:, :, 0]))\n",
+    "                        center_y = int(np.mean(memContour[:, :, 1]))\n",
+    "                        camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "\n",
+    "                if memObj.expectedChange is not None and memObj.expectedChange.changeSet[camName].changeType not in ['delete', None]:\n",
+    "                    # Transform expected change points\n",
+    "                    ex_pts = memObj.expectedChange.changeSet[camName].changePoints\n",
+    "                    trans_ex_pts = [transform_pt(pt) for pt in ex_pts]\n",
+    "                    memContour = np.array([trans_ex_pts], dtype=np.int32)\n",
+    "                    \n",
+    "                    center_x = int(np.mean(memContour[:, :, 0]))\n",
+    "                    center_y = int(np.mean(memContour[:, :, 1]))\n",
+    "\n",
+    "                    # Last change\n",
+    "                    last_pts = memObj.expectedChange.lastChange.changeSet[camName].changePoints\n",
+    "                    trans_last_pts = [transform_pt(pt) for pt in last_pts]\n",
+    "                    objContour = np.array([trans_last_pts], dtype=np.int32)\n",
+    "                    \n",
+    "                    obj_center_x = int(np.mean(objContour[:, :, 0]))\n",
+    "                    obj_center_y = int(np.mean(objContour[:, :, 1]))\n",
+    "                    \n",
+    "                    camImage = cv2.circle(camImage, (center_x, center_y), radius=10, color=(0, 255, 0), thickness=-1)\n",
+    "                    camImage = cv2.line(\n",
+    "                        camImage,\n",
+    "                        np.array((center_x, center_y), dtype=np.int32),\n",
+    "                        np.array((obj_center_x, obj_center_y), dtype=np.int32),\n",
+    "                        (125, 255, 0), 5)\n",
+    "\n",
+    "            # Paint last changes red\n",
+    "            if self.lastChanges is not None and not self.lastChanges.empty:\n",
+    "                lastChange = self.lastChanges.changeSet[camName]\n",
+    "                if lastChange is not None and lastChange.changeType not in ['delete', None]:\n",
+    "                    l_pts = lastChange.changePoints\n",
+    "                    trans_l_pts = [transform_pt(pt) for pt in l_pts]\n",
+    "                    lastChangeContour = np.array([trans_l_pts], dtype=np.int32)\n",
+    "                    camImage = cv2.drawContours(camImage, lastChangeContour, -1 , (0, 0, 127), -1)\n",
+    "\n",
+    "            # Paint classification green\n",
+    "            if self.lastClassification is not None and not self.lastClassification.empty:\n",
+    "                lastClass = self.lastClassification.changeSet[camName]\n",
+    "                if lastClass is not None and lastClass.changeType not in ['delete', None]:\n",
+    "                    c_pts = lastClass.changePoints\n",
+    "                    trans_c_pts = [transform_pt(pt) for pt in c_pts]\n",
+    "                    lastClassContour = np.array([trans_c_pts], dtype=np.int32)\n",
+    "                    camImage = cv2.drawContours(camImage, lastClassContour, -1 , (0, 255, 0), -1)\n",
+    "\n",
+    "            # Finally resize to thumbnail for checking?\n",
+    "            # The original code resized to [480, 640] at the very end.\n",
+    "            # But looking at genCombinedCameraWithChangesView in server, it assumes it gets images and then stacks them.\n",
+    "            # If we return HD images here, the server will stack HD images.\n",
+    "            # Let's keep it returning HD images as requested, and let the server handle resizing for thumbnail view.\n",
+    "            # Wait, the ORIGINAL code returned 480x640 images.\n",
+    "            # If I change it to return 1920x1080, I am changing the contract.\n",
+    "            # BUT the task says \"resize to 1920x1080\".\n",
+    "            # So I will return 1920x1080.\n",
+    "            \n",
+    "            images[camName] = camImage\n",
+    "        return images\n",
     "        if cameraKeys is None:\n",
     "            cameraKeys = self.cc.cameras.keys()\n",
     "\n",
